Hackily fix overflow

--- a/client/staticRestyleCode/public/css/base/base.css
+++ b/client/staticRestyleCode/public/css/base/base.css
@@ -35,6 +35,8 @@ body * {
 
 html {
   scrollbar-color: #873213 transparent;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 main {
